Fixed Cutout on IE11 and Android chrome,
Fixed Timer animation on IE11,
Fixed ComboBox design layout for allowClear.

--- a/src/main/resources/gwt/material/design/incubator/client/timer/resources/css/timer.css
+++ b/src/main/resources/gwt/material/design/incubator/client/timer/resources/css/timer.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: inline-block;
     height: 5px;
-    background: #eee;
+    background: #eee
 }
 
 .timer-progress .fill {
@@ -14,13 +14,14 @@
     background: #2196f3;
     width: 0;
     -webkit-animation: 6s fullw infinite;
-    animation: 6s fullw infinite;
+    animation: 6s fullw infinite
 }
+
 .timer-progress.bouncing .fill {
     background: #2196f3;
     width: 50%;
-    -webkit-animation: 1.5s cubic-bezier(0.08, -0.18, 0.91, 1.14) barbounce alternate infinite;
-    animation: 1.5s cubic-bezier(0.08, -0.18, 0.91, 1.14) barbounce alternate infinite;
+    -webkit-animation: 1.5s cubic-bezier(.08, -.18, .91, 1.14) barbounce alternate infinite;
+    animation: 1.5s cubic-bezier(.08, -.18, .91, 1.14) barbounce alternate infinite
 }
 
 @-webkit-keyframes barbounce {
@@ -28,14 +29,15 @@
         left: 0;
     }
     100% {
-        left: calc(100% - 50%);
+        left: 50%;
     }
 }
+
 @keyframes barbounce {
     0% {
         left: 0;
     }
     100% {
-        left: calc(100% - 50%);
+        left: 50%
     }
 }
